Bug 227291 - system load viewer displays wrong (too high) cpu usage
Summary: system load viewer displays wrong (too high) cpu usage
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-misc (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 221375 227182 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-17 00:00 UTC by Vincent de Phily
Modified: 2010-07-07 02:59 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vincent de Phily 2010-02-17 00:00:40 UTC
Version:            (using KDE 4.4.0)
OS:                Linux
Installed from:    Archlinux Packages

The system load viewer plasmoid constantly displays CPU usage that has little relevance to usage reported by ksysguard, top, and other cpu usage tools.

It stays around 30-50%, whether the system is idle or working hard.

This is a regression since KDE SC 4.3.5.

Tested with Arch and Gentoo packages, single- and dual-core CPUs.
Comment 1 Dima Ryazanov 2010-02-18 23:25:39 UTC
I'm getting the same thing: it shows 80%, while it's actually 1%.
Comment 2 Magnus Johansson 2010-02-24 22:40:41 UTC
Seconded. Mine is constantly at about 50%. This worked fine in 4.3.5.
Comment 3 Matthew Dawson 2010-02-24 22:58:15 UTC
When you are using this applet:
 - Do you have composting enabled?  And if so, what graphics driver?
 - Do you have the option "Show usage of all processors" checked?  If not, does the applet properly display the status when you do check it (either on single or dual cores?)
Comment 4 Dima Ryazanov 2010-02-24 23:11:44 UTC
I have compositing enabled, using the NVIDIA proprietary driver.

It displays correct values when I enable "Show usage of all processors".
When I disable it, it seems to keep the value from the first CPU, and doesn't update it anymore.

I'm using a quad-core CPU.
Comment 5 Vincent de Phily 2010-02-24 23:32:07 UTC
- Compositing doesn't seem to affect this bug.
- Switching "show usage of all processors" on and off does seem to have an effect. "On" seems better on my single-core, but it also randomly triggers bug #227144.
- On another note, displaying the popup by mousing over the applet is pretty CPU-intensive : at least 20% on this 1.6Ghz Atom, 1000ms updates. This can skew readings further when you use the applet to read CPU usage.
Comment 6 Magnus Johansson 2010-02-25 11:09:12 UTC
- No compositing enabled. Computer 1 (dual core): radeonhd 1.3.0. Computer 2 (quad core): intel 2.9.1. This bug triggers on both systems and seems independent on compositing.

- "Show usage of all processors" matters. The bug only triggers when unchecked. When checked it works as expected, but bug #227144 triggers frequently. Also, on my quad core with a wide vertical panel and a horizontal system load viewer, this makes the system load viewer annoyingly large. Still, checking "Show usage of all..." works as a workaround for me. It is not annoying on my dual core.
Comment 7 Dario Andres 2010-02-26 14:00:06 UTC
Bug 221375 seems related to this.
Comment 8 Dario Andres 2010-02-26 14:00:54 UTC
*** Bug 227182 has been marked as a duplicate of this bug. ***
Comment 9 Matthew Dawson 2010-03-05 17:38:11 UTC
*** Bug 221375 has been marked as a duplicate of this bug. ***
Comment 10 Matthew Dawson 2010-03-05 17:43:01 UTC
*** Bug 227144 has been marked as a duplicate of this bug. ***
Comment 11 Matthew Dawson 2010-03-05 17:48:56 UTC
This bug (and its related duplicates) should now be resolved in trunk as of revision 1098929 and in 4.4 branch as of 1098934.  The fix should be in 4.4.2.

There was some weird behaviour happening in the applet related connecting to data engine.  This caused the weird floating bars as well as the "frozen" bars for cpu.
Comment 12 Kévin FERRARE 2010-07-07 02:59:08 UTC
The "floating bar" problem described in bugs marked as duplicate ( Bug 221375 and Bug 227144 ) still occurs for me under kde 4.4.5