Fix a series of bugs regarding the cpu usage not properly rendering, either with a floating bar or with a non-updating bar.

Also disables disconnecting unused cpu sources.

BUG: 227291
BUG: 221375
BUG: 227144

svn path=/trunk/KDE/kdeplasma-addons/; revision=1098929